# wincetools

./: README  get-system-info.c  memory-layout-stuff.c  virtual-alloc.c  virtual-query-imager.py  virtual-query.c
inspection/: dump-active-process.c  global-memory-status.c  virtual-query-imager.py  virtual-query.c
loader/: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  compat.c  debug.h  dlmalloc.c  himemce-map-provider.c  himemce-map-provider.h  himemce-map.c  himemce-map.h  himemce-pre.c  himemce-pre.h  himemce-real.cpp  himemce-tool.c  himemce.c  himemce.h  kaddressbook-mobile.rc  kernel32_kernel_private.h  kernel32_module.c  kernel32_process.c  kleopatra.rc  kmail-mobile.rc  korganizer-mobile.rc  libhimemce.c  libhimemce.def  my_winternl.h  notes-mobile.rc  ntdll_error.c  ntdll_loader.c  ntdll_virtual.c  server_mapping.c  server_protocol.h  splashscreen.cpp  splashscreen.rc  tasks-mobile.rc  wine.h
